--- a/DongHyeokLee/Spring/demo/src/main/resources/templates/33th/html/loginForm.html
+++ b/DongHyeokLee/Spring/demo/src/main/resources/templates/33th/html/loginForm.html
@@ -1,26 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script>
+    function hcw(){
+        if(fm.id.value==""){
+        alert("*필수 입력 항목 입니다");
+        }else if(fm.pw1.value==""){
+         alert("*필수 입력 항목 입니다");
+        }else if(fm.pw2.value==""){
+          alert("*필수 입력 항목 입니다");
+        }
+    }
 
-    <style>
-        label{
-            font-size: 14px;
-            line-height: 25px;
-            }
-    </style>
+    function condition(){
+        alert("영문자 대/소문자 특수문자, 숫자 포함 8 ~ 32자")
+        }
+    </script>
+
 </head>
 <body>
 
- <h2>로그인</h2>
- <form>
-        <fieldset>
-            <label>아이디:<input type="text" id="user_id" size="16"></label>
-            <label>비밀번호:<input type="password" id="user_pw" size="16"></label>
-            <input type="submit" value="로그인">
-        </fieldset>
- </form>
+<div>
+<form name="fm">
+    <table>
+        <tr>
+       <td>*아이디</td>
+        <td><input type="text" id="id"></td>
+        </tr>
+        <tr>
+            <td>*패스워드</td>
+            <td><input type="password" id="pw1" onclick="condition()" ></td>
+        </tr>
+        <tr>
+            <td>*패스워드 확인</td>
+            <td><input type="password" id="pw2"></td>
+        </tr>
+        <tr>
+            <td>메일</td>
+            <td><input type="text" id="mail" onclick="hcw()"></td>
+        </tr>
+        <tr>
+            <td>주소</td>
+            <td><input type="text" id="address"></td>
+        </tr>
+    </table>
+    <div>
+        <button type="submit" id="btnLogin">가입하기</button>
+    </div>
+</form>
+</div>
 
 </body>
 </html>
+
