--- a/DongHyeokLee/Spring/Homework/demo/src/main/resources/templates/yMaker/board.html
+++ b/DongHyeokLee/Spring/Homework/demo/src/main/resources/templates/yMaker/board.html
@@ -2,100 +2,224 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
+    <!--modal -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
+    <!-- datepicker-->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
     <title>yMaker</title>
     <style>
         input {
          text-align: center;
         }
-
         input::placeholder {
           color: black;
         }
+        .wrapper {
+          display: flex;
+          justify-content: center;
+          align-items:center;
+          margin-top : 20px;
+        }
+        .wrapper2 {
+          display: flex;
+          justify-content: center;
+          align-items:center;
+        }
+
+        table {
+            width: 45%;
+            border: 2px solid gray;
+        }
+
+        #tableData {
+          text-align: center;
+        }
+
+        form {
+            width : 45%;
+        }
+
+        .btn {
+            margin-bottom : 10px;
+        }
+
+        #id {
+            margin-right : 18px;
+            margin-bottom : 15px;
+            width : 150px;
+            height : 30px;
+        }
+
+        #name {
+            margin-right : 200px;
+            margin-bottom : 15px;
+            width : 150px;
+            height : 30px;
+        }
+
+        #country {
+            margin-right : 18px;
+            width : 150px;
+            height : 30px;
+        }
+
+        #city {
+            margin-right : 18px;
+            width : 150px;
+            height : 30px;
+        }
+
+        #startDate {
+            margin-right : 10px;
+            width : 150px;
+            height : 30px;
+        }
+
+        #endDate {
+            width : 150px;
+            height : 30px;
+        }
+
+       .btn {
+            margin-left : 400px;
+       }
+
     </style>
 </head>
 
 <body>
- <h1>Grid그리드</h1>
+    <div class="wrapper">
+    <!--  -->
+    <form id="boardRequest" th:object="${boardRequest}">
+         <h3>Grid그리드</h3>
+         <table border="1" class="table" width="500" height="100">
+            <tr>
+                <td>
+                    <input type="text" id="id" name="id" th:field="*{id}" placeholder="아이디"/>
+                    <input type="text" id="name" name="name" th:field="*{name}" placeholder="이름"/>
 
- <form id="board" th:object="${board}" th:action="@{/board/save}" method="post">
- <table border="1">
-    <tr>
-        <td>
-            <input type="text" name="id" th:field="*{id}" placeholder="아이디"/>
-            <input type="text" name="name" th:field="*{name}" placeholder="이름"/>
+                    <input type="radio" id="male" name="gender" value="남" th:field="*{gender}">
+                    <label for="male">남</label>
+                    <input type="radio" id="female" name="gender" value="여" th:field="*{gender}">
+                    <label for="female">여</label>
 
-            <input type="radio" id="male" name="gender" value="남자" th:field="*{gender}">
-            <label for="male">남자</label>
-            <input type="radio" id="female" name="gender" value="여자" th:field="*{gender}">
-            <label for="female">여자</label>
+                    <br>
 
-            <br>
+                    <select id="country" name="country" onchange="loadCity(this)" th:field="*{country}">
+                        <option value="">국가</option>
+                        <option value="한국">한국</option>
+                        <option value="일본">일본</option>
+                        <option value="중국">중국</option>
+                    </select>
 
-            <select id="country" name="country" onchange="loadCity(this)" th:field="*{country}">
-                <option value="">국가</option>
-                <option value="한국">한국</option>
-                <option value="일본">일본</option>
-            </select>
+                    <select id="city" name="city" th:field="*{city}">
+                        <option value="">도시</option>
+                    </select>
 
-            <select id="city" name="city" th:field="*{city}">
-                <option value="">도시</option>
-            </select>
-        </td>
-    </tr>
- </table>
+                    <!-- datepicker-->
+                    <input type="text" id="startDate" th:field="*{startDate}" autocomplete='off'/>
+                    <input type="text" id="endDate" th:field="*{endDate}"autocomplete='off'/>
 
- <div>
-     <button type="submit">조회</button>
-     <button type="submit">저장</button>
-     <button type="button" id="delBtn">삭제</button>
- </div>
- </form>
- <table border="1">
-     <tr>
-         <th><input type="checkbox" value="checkAll" onclick="checkAll(this)"></th>
-         <th align="center" width="80">아이디</th>
-         <th align="center" width="80">이름</th>
-         <th align="center" width="80">성별</th>
-         <th align="center" width="80">국가</th>
-         <th align="center" width="80">도시</th>
-     </tr>
 
-     <tr th:if="${#lists.isEmpty(list)}">
-         <td colspan="5">
-             현재 등록된 게시물이 없습니다!
-         </td>
-     </tr>
+                </td>
+            </tr>
+         </table>
+        <!-- button -->
+         <div class="btn">
+             <button type="submit" id="btnSearch" onclick="searchBtn()">조회</button>
+             <button type="submit" id="btnSave" onclick="updateBtn()">저장</button>
+             <button type="button" id="excelDownload" class="download">엑셀다운</button>
+             <button type="button" data-toggle="modal" data-target="#modal">삭제</button>
+         </div>
+         </form>
 
-     <tr th:each="board : ${list}">
-         <td>
-             <input type="checkbox" name="checkbox" th:value="${board.boardNo}">
-         </td>
-         <td align="left" th:text="${board.id}">
-         </td>
-         <td align="right" th:text="${board.name}">
-         </td>
-         <td align="right" th:text="${board.gender}">
-         </td>
-         <td align="right" th:text="${board.country}">
-         </td>
-         <td align="right" th:text="${board.city}">
-         </td>
-     </tr>
- </table>
+        <!--modal-->
+         <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+             <div class="modal-dialog" role="document">
+                 <div class="modal-content">
+                     <div class="modal-header">
+                         <h5 class="modal-title" id="exampleModalLabel">게시물 삭제</h5>
+                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                             <span aria-hidden="true">&times;</span>
+                         </button>
+                     </div>
+                     <div class="modal-body">
+                         게시물을 정말 삭제하시겠습니까?
+                     </div>
+                     <div class="modal-footer">
+                         <button type="button" class="btn btn-primary" id="delBtn" onclick="deleteBtn()">삭제</button>
+                         <button type="button" class="btn btn-secondary" data-dismiss="modal" id="cancel">취소</button>
+                     </div>
+                 </div>
+             </div>
+         </div>
+         </div>
+    </div>
+         <!-- list -->
+    <div class="wrapper2">
+         <table border="1" id="tableData" width="500">
+             <tr>
+                 <th width="30" align="center"><input type="checkbox" value="checkAll" onclick="checkAll(this)"></th>
+                 <th align="center" width="100">아이디</th>
+                 <th align="center" width="100">이름</th>
+                 <th align="center" width="100">성별</th>
+                 <th align="center" width="100">국가</th>
+                 <th align="center" width="100">도시</th>
+             </tr>
 
+             <tr th:if="${#lists.isEmpty(list)}">
+                 <td colspan="6">
+                     현재 등록된 정보가 없습니다!
+                 </td>
+             </tr>
+
+             <tr th:each="board : ${list}">
+                 <td>
+                     <input type="checkbox" name="checkbox" th:value="${board.boardNo}">
+                 </td>
+                 <td align="center" th:text="${board.id}">
+                 </td>
+                 <td align="center" th:text="${board.name}">
+                 </td>
+                 <td align="center" th:text="${board.gender}">
+                 </td>
+                 <td align="center" th:text="${board.country}">
+                 </td>
+                 <td align="center" th:text="${board.city}">
+                 </td>
+             </tr>
+         </table>
+    </div>
 </body>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!--modal -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"></script>
+
+<!--datepicker -->
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<!-- Sheet JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.14.3/xlsx.full.min.js"></script>
+<!--FileSaver savaAs 이용 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
+
 <script>
-    //select
+    //combo box
     function loadCity(e) {
         let korea=["서울","부산","대전","대구"];
         let japan=["도쿄","오사카","후쿠오카","교토"];
+        let china=["상하이","광저우","산시성","베이징"];
 
         let target = document.getElementById("city");
 
-        if(e.value == "korea") var d = korea;
-        else if(e.value == "japan") var d = japan;
+        if(e.value == "한국") var d = korea;
+        else if(e.value == "일본") var d = japan;
+        else if(e.value == "중국") var d = china;
 
         target.options.length = 0;
 
@@ -118,7 +242,8 @@
     }
 
     //delete 요청을 해서 boardNo을 리스트 형태로 보내서 삭제 하고 싶음
-    $("#delBtn").click(function(){
+    //$("#delBtn").click(function(){
+    function deleteBtn() {
         var arr = []
 
         $('input[name="checkbox"]:checked').each(function(i){//체크된 리스트 저장
@@ -128,6 +253,7 @@
         if(arr.length === 0){
             console.log("this");
             alert("삭제할 항목을 선택해 주세요");
+            modalHide();
             return;
         }else{
             var objParams = {
@@ -139,22 +265,166 @@
                     dataType    :   "json",
                     contentType :   "application/x-www-form-urlencoded; charset=UTF-8",
                     type        :   "post",
+                    traditional :    true,
                     data        :   objParams ,
                     success     :   function(retVal){
-                         if(retVal.code == "OK") {
-                            alert(retVal.message);
-                        } else {
-                            alert(retVal.message);
-                        }
+                           console.log(retVal.code);
+                           alert(retVal.message);
+                           location.reload();
                     },
-                    error       :   function(request, status, error){
-                        console.log("AJAX_ERROR");
+                    error       :   function(e){
+                        console.log(e.status);
                     }
                 });
             }
+        }
+        //});
+
+        //모달 닫기
+        function modalHide() {
+            $("#modal").hide();
+            $('.modal-backdrop').hide();
+        }
+
+        //조회
+        function searchBtn(){
+            var formObj = $("#boardRequest");
+
+            formObj.attr("action", "/board/search");
+            formObj.attr("method", "post");
+            formObj.submit();
+        }
+
+        //update
+       function updateBtn() {
+                var formObj = $("#boardRequest");
+
+                var arr = []
+
+                $('input[name="checkbox"]:checked').each(function(i){//체크된 리스트 저장
+                    arr.push($(this).val());
+                });
+                //체크 안했을 땐 그냥 데이터 저장
+                if(arr.length === 0){
+                    formObj.attr("action", "/board/save");
+                    formObj.attr("method", "post");
+                    formObj.submit();
+
+                //체크 했을 땐 수정 버튼
+                }else if(arr.length === 1){
+                    var boardNo = arr[0];
+                    var id = $('#id').val();
+                    var name = $('#name').val();
+                    var gender = $('input[name="gender"]:checked').val();
+                    var country = $('#country').val();
+                    var city = $('#city').val();
+
+                    var board = {
+                        "boardNo" : boardNo,
+                        "id" : id,
+                        "name" : name,
+                        "gender" : gender,
+                        "country" : country,
+                        "city" : city
+                    };
+
+                 $.ajax({
+                    url         :   "/board/modify",
+                    dataType    :   "json",
+                    contentType :   "application/x-www-form-urlencoded; charset=UTF-8",
+                    type        :   "post",
+                    traditional :    true,
+                    async       :    false,
+                    data        :    board,
+                    success     :    function(retVal){
+                               console.log(retVal.code);
+                               alert(retVal.message);
+                               window.location.href="/board/list"
+                    },
+                    error       :    function(e){
+                               console.log(e.status);
+                    }
+                });
+
+                //여러개 체크했을 때
+                }else{
+                    console.log(arr[0]);
+                    alert("여러개를 수정 할 수 없습니다");
+
+                }
+           }
+
+
+
+
+       //datepicker
+       $(document).ready(function () {
+            $("#startDate").datepicker({
+                dateFormat: "yy-mm-dd", // 날짜의 형식
+                minDate: 0,
+                nextText: ">",
+                prevText: "<",
+                onSelect: function (date) {
+                    var endDate = $('#endDate');
+                    var startDate = $(this).datepicker('getDate');
+                    var minDate = $(this).datepicker('getDate');
+                    endDate.datepicker('setDate', minDate);
+                    startDate.setDate(startDate.getDate() + 30);
+                    endDate.datepicker('option', 'maxDate', startDate);
+                    endDate.datepicker('option', 'minDate', minDate);
+                }
+            });
+            $('#endDate').datepicker({
+                dateFormat: "yy-mm-dd", // 날짜의 형식
+                nextText: ">",
+                prevText: "<"
+            });
         });
 
+        //excel
+        const excelDownload = document.querySelector('#excelDownload');
 
+        document.addEventListener('DOMContentLoaded', ()=>{
+            excelDownload.addEventListener('click', exportExcel);
+        });
 
+        function exportExcel(){
+              // step 1. workbook 생성
+              var wb = XLSX.utils.book_new();
+
+              // step 2. 시트 만들기
+              var newWorksheet = excelHandler.getWorksheet();
+
+              // step 3. workbook에 새로만든 워크시트에 이름을 주고 붙인다.
+              XLSX.utils.book_append_sheet(wb, newWorksheet, excelHandler.getSheetName());
+
+              // step 4. 엑셀 파일 만들기
+              var wbout = XLSX.write(wb, {bookType:'xlsx',  type: 'binary'});
+
+              // step 5. 엑셀 파일 내보내기
+              saveAs(new Blob([s2ab(wbout)],{type:"application/octet-stream"}), excelHandler.getExcelFileName());
+            }
+
+            var excelHandler = {
+                getExcelFileName : function(){
+                    return 'table-test.xlsx';	//파일명
+                },
+                getSheetName : function(){
+                    return 'Table Test Sheet';	//시트명
+                },
+                getExcelData : function(){
+                    return document.getElementById('tableData'); 	//TABLE id
+                },
+                getWorksheet : function(){
+                    return XLSX.utils.table_to_sheet(this.getExcelData());
+                }
+            }
+
+            function s2ab(s) {
+              var buf = new ArrayBuffer(s.length); //convert s to arrayBuffer
+              var view = new Uint8Array(buf);  //create uint8array as viewer
+              for (var i=0; i<s.length; i++) view[i] = s.charCodeAt(i) & 0xFF; //convert to octet
+              return buf;
+            }
 </script>
 </html>
