--- a/DongHyeokLee/Spring/Homework/demo/src/main/resources/static/yMaker/board.css
+++ b/DongHyeokLee/Spring/Homework/demo/src/main/resources/static/yMaker/board.css
@@ -17,20 +17,13 @@ input::placeholder {
 }
 
 table {
-    width: 45%;
+    width: 900px;
+    height: 100px;
     border: 2px solid gray;
 }
 
 #tableData {
-  text-align: center;
-}
-
-form {
-    width : 45%;
-}
-
-.btn {
-    margin-bottom : 10px;
+    text-align: center;
 }
 
 #id {
@@ -72,4 +65,20 @@ form {
 
 .btn {
     margin-left : 400px;
+    margin-bottom: 10px;
+}
+
+#btnSearch, #btnAddRow,
+#btnSave, #excelDownload,
+#btnDel{
+    border-radius: 12px;
+    background: white;
+    border: 2px solid gray;
+}
+
+section {
+    width: 900px;             /* 너비 값 */
+    height: 1000px;
+    padding: 15px;            /* 테두리와 내용물 사이의 여백 */
+    border: 5px solid gray;   /* 테두리 회색 실선 두께 - 5픽셀 */
 }
