--- a/DongHyeokLee/Spring/Homework/demo/src/main/resources/static/yMaker/board.css
+++ b/DongHyeokLee/Spring/Homework/demo/src/main/resources/static/yMaker/board.css
@@ -10,20 +10,30 @@ input::placeholder {
   align-items:center;
   margin-top : 20px;
 }
-.wrapper2 {
-  display: flex;
+.data-wrapper {
   justify-content: center;
   align-items:center;
+  display: block;
+  height: 300px;
+  overflow: auto;
+  overflow-x:hidden;
 }
 
-table {
-    width: 900px;
+.data-wrapper table {
+    width: 100%;
     height: 100px;
     border: 2px solid gray;
+    text-align: center;
+
+}
+.data-wrapper table tr{
+    width: 100%;
+    height: 50px;
+
 }
 
-#tableData {
-    text-align: center;
+.data-wrapper table th{
+    border-color: transparent;
 }
 
 #id {
@@ -36,18 +46,6 @@ table {
 #name {
     margin-right : 200px;
     margin-bottom : 15px;
-    width : 150px;
-    height : 30px;
-}
-
-#country {
-    margin-right : 18px;
-    width : 150px;
-    height : 30px;
-}
-
-#city {
-    margin-right : 18px;
     width : 150px;
     height : 30px;
 }
@@ -81,4 +79,107 @@ section {
     height: 1000px;
     padding: 15px;            /* 테두리와 내용물 사이의 여백 */
     border: 5px solid gray;   /* 테두리 회색 실선 두께 - 5픽셀 */
+}
+
+/* 국가 */
+/*.countryMultiselect,
+.addCountryMultiselect {
+  width: 150px;
+
+}
+
+.countryBox,
+.addCountryBox {
+  position: relative;
+}
+
+.countryBox select
+.addCountryBox select{
+  width: 150px;
+  font-weight: bold;
+}
+
+.countrySelect,
+.addCountrySelect{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+#countryCheckBox,
+#addCountryCheckBox {
+  display: none;
+  border: 1px #dadada solid;
+}
+
+#countryCheckBox label,
+#addCountryCheckBox label {
+  display: block;
+}
+
+#countryCheckBox label:hover,
+#addCountryCheckBox label:hover {
+  background-color: #1e90ff;
+}*/
+
+/* 도시 */
+.cityMultiselect,
+.addCityMultiselect,
+.countryMultiselect,
+.addCountryMultiselect {
+  width: 150px;
+  margin-right: 20px;
+  float:left;
+}
+
+.cityBox,
+.addCityBox,
+.countryBox,
+.addCountryBox{
+  position: relative;
+}
+
+.cityBox select,
+.addCityBox select,
+.countryBox select,
+.addCountryBox select
+{
+  width: 100%;
+  height: 30px;
+  text-align: center;
+}
+
+.citySelect,
+.addCitySelect
+.countrySelect,
+.addCountrySelect{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+#cityCheckBox,
+#addCityCheckBox,
+#countryCheckBox,
+#addCountryCheckBox{
+  display: none;
+  border: 1px #dadada solid;
+}
+
+#cityCheckBox label,
+#addCityCheckBox label,
+#countryCheckBox label,
+#addCountryCheckBox label{
+  display: block;
+}
+
+#cityCheckBox label:hover,
+#addCityCheckBox label:hover,
+#countryCheckBox label:hover,
+#addCountryCheckBox label:hover{
+  background-color: #1e90ff;
 }
